# caw

./: .gitignore  Cargo.toml  README.md  shell.nix
audio-file/: Cargo.toml  README.md
audio-file/src/: lib.rs
bevy/: Cargo.toml  README.md
bevy/src/: lib.rs
builder-proc-macros/: Cargo.toml  README.md
builder-proc-macros/src/: lib.rs
caw/: Cargo.toml  README.md
caw-next/: Cargo.toml
caw-next/examples/: many_oscillators.rs  many_oscillators_multithreaded.rs  saw.rs
caw-next/src/: player.rs
caw/examples/: audio_file_playback.rs  car_sound_basic.rs  drum_sounds.rs  electric_organ_level_1.rs  electric_organ_level_2.rs  electric_organ_menu.rs  electric_organ_sfx.rs  guitar_strings.rs  lfo_pwm.rs  live_example.rs  many_oscillators.rs  periodic_gate_varying_period.rs  saw.rs  simple.rs  tweet.rs  udp_viz_demo.rs
caw/src/: lib.rs  microphone.rs  midi.rs  sample.rs  sample_player.rs  signal_player.rs
computer-keyboard/: Cargo.toml  README.md
computer-keyboard/src/: lib.rs
core/: Cargo.toml  README.md
core/examples/: saw_cpal.rs  saw_print_values.rs
core/src/: biquad_band_pass_filter.rs  biquad_filter.rs  builder.rs  cell.rs  clock.rs  envelope.rs  filters.rs  frame_sig.rs  freeverb.rs  keyboard.rs  lib.rs  loopers.rs  midi.rs  moog_ladder_low_pass_filter.rs  music.rs  oscillator.rs  patches.rs  sampler.rs  sequencers.rs  sf64_filter_builder_trait.rs  sig.rs  sig_ops.rs  signal.rs  signal_arithmetic.rs  stereo.rs  templates.rs  util.rs
currawong/: Cargo.toml
currawong/examples/: car_sound_basic.rs  drum_sounds.rs  lfo_pwm.rs  periodic_gate_varying_period.rs  tweet.rs
currawong/src/: lib.rs  midi.rs  sample.rs  sample_player.rs  signal_player.rs
interactive/: Cargo.toml  README.md
interactive-next/: Cargo.toml
interactive-next/examples/: basic_stereo_oscillographics.rs  chord_builder_arp_interactive.rs  chord_builder_interactive.rs  drums.rs  drums_loop.rs  electric_organ_level_1.rs  electric_organ_level_2.rs  electric_organ_menu.rs  envelope_interactive.rs  harmonics_oscillographics.rs  keyboard_and_mouse_interactive.rs  keyboard_and_mouse_polyphonic_interactive.rs  many_oscillators_multithreaded_visualized.rs  mesmerize.rs  midi_file_interactive.rs  midi_live_interactive.rs  midi_live_interactive_chorus.rs  midi_live_interactive_serial.rs  periodic_gate_interactive.rs  periodic_trig_interactive.rs  saw_interactive.rs  saw_interactive_stereo.rs  simd_super_saw_tritone.rs  vocoder_interactive.rs
interactive-next/src/: input.rs  lib.rs  window.rs
interactive/examples/: band_pass.rs  basic_drum_sounds.rs  basic_stereo_oscillographics.rs  car_sound.rs  chord_builder_arp_interactive.rs  chord_builder_interactive.rs  diy_square_wave.rs  drone.rs  drum_machine.rs  drum_reverb.rs  drum_sequencer.rs  drums.rs  drums_loop.rs  electric_organ_level_1.rs  electric_organ_level_2.rs  electric_organ_menu.rs  envelope_interactive.rs  guitar_strings.rs  harmonics_oscillographics.rs  hello.rs  keyboard_and_mouse.rs  keyboard_and_mouse_arp.rs  keyboard_and_mouse_arp_index_loops.rs  keyboard_and_mouse_chords.rs  keyboard_and_mouse_chords_arp.rs  keyboard_and_mouse_interactive.rs  keyboard_and_mouse_lofi.rs  keyboard_and_mouse_monophonic.rs  keyboard_and_mouse_polyphonic_interactive.rs  live1.rs  many_oscillators_multithreaded_visualized.rs  microphone.rs  midi.rs  midi_file.rs  midi_file_interactive.rs  midi_live.rs  midi_live_arp.rs  midi_live_interactive.rs  midi_live_interactive_chorus.rs  midi_live_interactive_serial.rs  (+17 more)
interactive/src/: clock.rs  envelope.rs  filters.rs  input.rs  lib.rs  midi.rs  modules.rs  music.rs  oscillator.rs  sample_player.rs  signal.rs  signal_arithmetic.rs  signal_player.rs  templates.rs  window.rs
keyboard/: Cargo.toml  README.md
keyboard/src/: a440_12tet.rs  event.rs  lib.rs  mono_voice.rs  polyphony.rs  voice.rs
live/: Cargo.toml  README.md
live/src/: lib.rs
midi/: Cargo.toml  README.md
midi-file/: Cargo.toml  README.md
midi-file/src/: lib.rs
midi-live/: Cargo.toml  README.md
midi-live/src/: lib.rs
midi-serial/: Cargo.toml  README.md
midi-serial/src/: lib.rs
midi-udp/: Cargo.toml  README.md
midi-udp-client/: Cargo.toml  README.md
midi-udp-client/examples/: midi_udp_client_controller.rs
midi-udp-client/src/: lib.rs
midi-udp-widgets-app/: Cargo.toml  README.md
midi-udp-widgets-app-lib/: Cargo.toml  README.md
midi-udp-widgets-app-lib/examples/: midi_udp_widgets_app_lib_demo.rs  midi_udp_widgets_app_lib_knob.rs
midi-udp-widgets-app-lib/src/: button.rs  computer_keyboard.rs  knob.rs  lib.rs  midi.rs  num_keys_bit_7.rs  server.rs  switch.rs  widget.rs  xy.rs
midi-udp-widgets-app/src/: main.rs
midi-udp/examples/: midi_udp_controller.rs
midi-udp/src/: lib.rs
midi/src/: lib.rs
modules/: Cargo.toml  README.md
modules/src/: band_pass_butterworth.rs  band_pass_chebyshev.rs  band_pass_filter_butterworth.rs  band_pass_filter_chebyshev.rs  chorus.rs  compressor.rs  delay_periodic.rs  delay_s.rs  delay_trig.rs  delay_triggered.rs  down_sample.rs  envelope.rs  envelope_follower.rs  envelope_generator.rs  high_pass_butterworth.rs  high_pass_chebyshev.rs  high_pass_filter_butterworth.rs  high_pass_filter_chebyshev.rs  lib.rs  low_pass_biquad.rs  low_pass_butterworth.rs  low_pass_chebyshev.rs  low_pass_diode_ladder.rs  low_pass_filter_butterworth.rs  low_pass_filter_chebyshev.rs  low_pass_filter_moog_ladder.rs  low_pass_moog_ladder.rs  noise.rs  oscillator.rs  periodic_gate.rs  periodic_trig.rs  quantizer.rs  reverb_freeverb.rs  sample_and_hold.rs  sample_playback.rs  super_saw.rs
patches/: Cargo.toml  README.md
patches/src/: drum.rs  lib.rs  pulse_pwm.rs
persist/: Cargo.toml  README.md
persist/src/: lib.rs
player/: Cargo.toml  README.md
player/examples/: many_oscillators.rs  many_oscillators_multithreaded.rs  saw.rs
player/src/: lib.rs
sdl2/: Cargo.toml  README.md
sdl2/src/: lib.rs
utils/: Cargo.toml  README.md
utils/src/: bitwise_pattern_trig.rs  lib.rs  looper.rs  (+2 more)
viz-udp-app/: Cargo.toml  README.md
viz-udp-app-lib/: Cargo.toml  README.md
widgets/: Cargo.toml  README.md
(+56 files in other folders)
