[workspace]

resolver = "2"

members = [
    "audio-file",
    "bevy",
    "builder-proc-macros",
    "caw",
    "computer-keyboard",
    "core",
    "interactive",
    "keyboard",
    "midi-file",
    "midi-live",
    "midi-serial",
    "midi",
    "modules",
    "patches",
    "player",
    "utils",
]
