[workspace]

resolver = "2"

members = [
    "audio-file",
    "bevy",
    "builder-proc-macros",
    "caw",
    "computer-keyboard",
    "core",
    "interactive",
    "keyboard",
    "live",
    "midi",
    "midi-file",
    "midi-live",
    "midi-serial",
    "midi-udp",
    "midi-udp-client",
    "midi-udp-widgets-app",
    "midi-udp-widgets-app-lib",
    "modules",
    "patches",
    "player",
    "utils",
    "viz-udp-app",
    "viz-udp-app-lib",
    "widgets",
]
