[package]
name = "caw_audio_file"
version = "0.2.1"
description = "Load audio files for sampling in the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_audio_file"
edition = "2021"

[dependencies]
caw_core = { version = "0.3", path = "../core" }
hound = "3.5"
anyhow = "1"
