[package]
name = "caw_next"
version = "0.1.0"
edition = "2021"

[dependencies]
caw_core_next = { version = "0.1", path = "../core-next" }
caw_builders = { version = "0.1", path = "../builders" }
anyhow = "1.0"
cpal = "0.15"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "saw"

[[example]]
name = "many_oscillators"
