[package]
name = "caw"
version = "0.8.0"
description = "A framework for building software-defined modular synthesizers"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw"
edition = "2021"

[features]
web = ["caw_player/web", "caw_keyboard/web", "caw_modules/web", "caw_utils/web"]
player = ["caw_player"]
midi_live = ["caw_midi", "caw_midi_live"]
midi_file = ["caw_midi", "caw_midi_file"]
midi_serial = ["caw_midi", "caw_midi_serial"]
interactive = ["caw_interactive"]
audio_file = ["caw_audio_file"]

[dependencies]
caw_core = { version = "0.5", path = "../core" }
caw_computer_keyboard = { version = "0.4", path = "../computer-keyboard" }
caw_keyboard = { version = "0.4", path = "../keyboard" }
caw_modules = { version = "0.4", path = "../modules" }
caw_patches = { version = "0.4", path = "../patches" }
caw_utils = { version = "0.4", path = "../utils" }
caw_builder_proc_macros = { version = "0.1", path = "../builder-proc-macros" }
caw_player = { version = "0.7", path = "../player", optional = true }
caw_midi = { version = "0.4", path = "../midi", optional = true }
caw_midi_live = { version = "0.4", path = "../midi-live", optional = true }
caw_midi_file = { version = "0.4", path = "../midi-file", optional = true }
caw_midi_serial = { version = "0.4", path = "../midi-serial", optional = true }
caw_audio_file = { version = "0.4", path = "../audio-file", optional = true }
caw_interactive = { version = "0.7", path = "../interactive", optional = true }

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "electric_organ_menu"
required-features = [ "interactive" ]

[[example]]
name = "electric_organ_level_1"
required-features = [ "interactive" ]

[[example]]
name = "electric_organ_level_2"
required-features = [ "interactive" ]

[[example]]
name = "electric_organ_sfx"
required-features = [ "interactive" ]

[[example]]
name = "simple"
required-features = [ "interactive" ]

[[example]]
name = "audio_file_playback"
required-features = [ "interactive", "audio_file" ]

[[example]]
name = "guitar_strings"
required-features = [ "interactive" ]
