[package]
name = "caw_computer_keyboard"
version = "0.3.0"
description = "Use a computer keyboard to control caw synthesizer modules"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_computer_keyboard"
edition = "2021"

[dependencies]
caw_keyboard = { version = "0.3", path = "../keyboard" }
caw_core = { version = "0.4", path = "../core" }
itertools = "0.14"
