[package]
name = "caw_core"
version = "0.6.0"
description = "Core types for caw software-defined modular synthesizer"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_core"
edition = "2024"
