[package]
name = "currawong"
version = "0.1.0"
edition = "2021"

[features]
default = ["midi"]
midi = ["midly", "midir", "currawong_core/midi"]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
currawong_core = { version = "0.1", path = "../core" }
hound = "3.5"
log = "0.4"
midly = { version = "0.5", optional = true }
midir = { version = "0.9", optional = true }
nix = { version = "0.27", features = ["fs", "term"] }
num_cpus = "1.0"

[[example]]
name = "periodic_gate_varying_period"

[[example]]
name = "car_sound_basic"

[[example]]
name = "lfo_pwm"

[[example]]
name = "tweet"

[[example]]
name = "drum_sounds"
