[package]
name = "currawong"
version = "0.5.0"
edition = "2021"
description = "Software-defined modular synthesizer"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/currawong.git"
repository = "https://github.com/gridbugs/currawong.git"
documentation = "https://docs.rs/currawong"

[features]
default = ["midi"]
midi = ["midly", "midir", "nix", "currawong_core/midi"]
web = ["cpal/wasm-bindgen", "currawong_core/web"]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
currawong_core = { version = "0.5", path = "../core" }
log = "0.4"
midly = { version = "0.5", optional = true }
midir = { version = "0.9", optional = true }
nix = { version = "0.28", features = ["fs", "term"], optional = true }
hound = "3.5"

[[example]]
name = "periodic_gate_varying_period"

[[example]]
name = "car_sound_basic"

[[example]]
name = "lfo_pwm"

[[example]]
name = "tweet"

[[example]]
name = "drum_sounds"
