[package]
name = "caw_interactive_next"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
caw_next = { version = "0.1", path = "../caw-next" }
caw_core_next = { version = "0.1", path = "../core-next" }
caw_builders = { version = "0.1", path = "../builders" }
line_2d = "0.5"
rgb_int = "0.1"
sdl2 = "0.37"

[dev-dependencies]
env_logger = "0.11"
rand = "0.8"
wide = "0.7"

[[example]]
name = "saw_interactive"

[[example]]
name = "basic_stereo_oscillographics"

[[example]]
name = "many_oscillators_multithreaded_visualized"

[[example]]
name = "mesmerize"

[[example]]
name = "envelope_interactive"
