[package]
name = "caw_interactive_next"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
caw_next = { version = "0.1", path = "../caw-next" }
caw_core_next = { version = "0.1", path = "../core-next" }
caw_computer_keyboard = { version = "0.1", path = "../computer-keyboard" }
line_2d = "0.5"
rgb_int = "0.1"
sdl2 = "0.37"

[dev-dependencies]
caw_keyboard = { version = "0.1", path = "../keyboard" }
caw_modules = { version = "0.1", path = "../modules" }
env_logger = "0.11"
rand = "0.8"
wide = "0.7"

[[example]]
name = "saw_interactive"

[[example]]
name = "basic_stereo_oscillographics"

[[example]]
name = "many_oscillators_multithreaded_visualized"

[[example]]
name = "harmonics_oscillographics"

[[example]]
name = "envelope_interactive"

[[example]]
name = "keyboard_and_mouse_interactive"

[[example]]
name = "keyboard_and_mouse_polyphonic_interactive"
