[package]
name = "caw_interactive"
version = "0.2.0"
description = "Interactive keyboard and mouse control, and visualization for the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_interactive"
edition = "2021"

[dependencies]
anyhow = "1.0"
caw_player = { version = "0.1", path = "../player" }
caw_core = { version = "0.2", path = "../core" }
caw_computer_keyboard = { version = "0.1", path = "../computer-keyboard" }
line_2d = "0.5"
rgb_int = "0.1"
sdl2 = "0.37"
