[package]
name = "caw_interactive"
version = "0.8.0"
description = "Interactive keyboard and mouse control, and visualization for the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_interactive"
edition = "2024"

[dependencies]
anyhow = "1.0"
caw_player = { version = "0.8", path = "../player" }
caw_core = { version = "0.5", path = "../core" }
caw_computer_keyboard = { version = "0.4", path = "../computer-keyboard" }
line_2d = "0.5"
rgb_int = "0.1"
sdl2 = "0.37"

[dev-dependencies]
caw_keyboard = { version = "0.4", path = "../keyboard" }
caw_midi = { version = "0.4", path = "../midi" }
caw_midi_live = { version = "0.4", path = "../midi-live" }
caw_midi_file = { version = "0.4", path = "../midi-file" }
caw_midi_serial = { version = "0.4", path = "../midi-serial" }
caw_modules = { version = "0.4", path = "../modules" }
caw_patches = { version = "0.4", path = "../patches" }
caw_utils = { version = "0.4", path = "../utils" }
caw_audio_file = { version = "0.4", path = "../audio-file" }
caw_widgets = { path = "../widgets" }
env_logger = "0.11"
rand = "0.8"
wide = "0.7"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "saw_interactive"

[[example]]
name = "basic_stereo_oscillographics"

[[example]]
name = "harmonics_oscillographics"

[[example]]
name = "envelope_interactive"

[[example]]
name = "keyboard_and_mouse_interactive"

[[example]]
name = "keyboard_and_mouse_polyphonic_interactive"

[[example]]
name = "midi_live_interactive"

[[example]]
name = "midi_live_interactive_chorus"

[[example]]
name = "midi_live_interactive_serial"

[[example]]
name = "midi_file_interactive"

[[example]]
name = "vocoder_interactive"

[[example]]
name = "periodic_gate_interactive"

[[example]]
name = "periodic_trig_interactive"

[[example]]
name = "chord_builder_interactive"

[[example]]
name = "chord_builder_arp_interactive"

[[example]]
name = "drums"

[[example]]
name = "drums_loop"

[[example]]
name = "sequencer"
