[package]
name = "caw_keyboard"
version = "0.4.0"
description = "Abstract representation of a (musical) keyboard for the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_keyboard"
edition = "2024"

[features]
web = ["getrandom/js"]

[dependencies]
caw_core = { version = "0.5", path = "../core" }
smallvec = ">=1.6.1,<2"
log = "0.4"
rand = "0.8"
getrandom = "0.2"
itertools = "0.14"
