[package]
name = "caw_keyboard"
version = "0.5.0"
description = "Abstract representation of a (musical) keyboard for the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_keyboard"
edition = "2024"

[features]
web = ["getrandom/wasm_js"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
caw_core = { version = "0.6", path = "../core" }
smallvec = ">=1.6.1,<2"
log = "0.4"
rand = "0.9"
getrandom = "0.3"
itertools = "0.14"
