[package]
name = "caw_midi_file"
version = "0.2.1"
description = "Play midi files with the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_midi_file"
edition = "2021"

[dependencies]
midly = "0.5"
anyhow = "1"
caw_core = { version = "0.3", path = "../core" }
caw_midi = { version = "0.2", path = "../midi" }
