[package]
name = "caw_midi_live"
version = "0.2.0"
description = "Use a midi device to control caw synthesizers"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_midi_live"
edition = "2021"

[dependencies]
midir = "0.10"
midly = "0.5"
anyhow = "1"
log = "0.4"
caw_midi = { version = "0.2", path = "../midi" }
caw_core = { version = "0.3", path = "../core" }
