[package]
name = "caw_midi_serial"
version = "0.1.0"
description = "Control caw synthesizers with a serial device that transmits midi data over a serial port"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_midi_serial"
edition = "2021"

[dependencies]
anyhow = "1.0"
caw_core = { version = "0.2", path = "../core" }
caw_midi = { version = "0.1", path = "../midi" }
midly = "0.5"
nix = { version = "0.29", features = ["fs", "term"] }
