[package]
name = "caw_midi_udp_client"
version = "0.1.1"
edition = "2024"
description = "A UDP client for sending midi commands to caw synthesizers"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_widgets"

[dependencies]
anyhow = "1.0"
midly = "0.5"
caw_midi = { version = "0.4", path = "../midi" }

[dev-dependencies]
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "midi_udp_client_controller"
