[package]
name = "caw_midi_udp_widgets_app_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
caw_midi_udp = { version = "0.1", path = "../midi-udp" }
caw_core = { version = "0.5", path = "../core" }
caw_midi = { version = "0.4", path = "../midi" }
caw_builder_proc_macros = { version = "0.1", path = "../builder-proc-macros" }
lazy_static = "1.5"
anyhow = "1.0"

[dev-dependencies]
env_logger = "0.11"
caw_interactive = { path = "../interactive" }
caw_modules = { version = "0.4", path = "../modules" }

[[example]]
name = "midi_udp_widgets_app_lib_knob"
