[package]
name = "caw_midi_udp_widgets_app_lib"
version = "0.2.0"
edition = "2024"
description = "Library for launching instances of caw_midi_udp_widgets_app as signals of MIDI commands"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_midi_udp_widgets_app_lib"

[dependencies]
caw_midi_udp = { version = "0.2", path = "../midi-udp" }
caw_core = { version = "0.6", path = "../core" }
caw_midi = { version = "0.5", path = "../midi" }
caw_builder_proc_macros = { version = "0.2", path = "../builder-proc-macros" }
caw_keyboard = { version = "0.5", path = "../keyboard" }
lazy_static = "1.5"
anyhow = "1.0"
midly = "0.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
caw_interactive = { path = "../interactive" }
caw_modules = { path = "../modules" }

[[example]]
name = "midi_udp_widgets_app_lib_demo"
