[package]
name = "caw_midi_udp"
version = "0.2.0"
edition = "2024"
description = "A caw signal of MIDI events backed by a UDP/IP server which can receive serialized MIDI events"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_midi_udp"

[dependencies]
anyhow = "1.0"
caw_core = { version = "0.6", path = "../core" }
caw_midi = { version = "0.5", path = "../midi" }
midly = "0.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
caw_interactive = { path = "../interactive" }
caw_modules = { path = "../modules" }

[[example]]
name = "midi_udp_controller"
