[package]
name = "caw_midi"
version = "0.2.2"
description = "Common midi logic for the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_midi"
edition = "2021"

[dependencies]
midly = "0.5"
smallvec = ">=1.6.1,<2"
caw_core = { version = "0.3", path = "../core" }
caw_keyboard = { version = "0.2", path = "../keyboard" }
