[package]
name = "caw_modules"
version = "0.4.2"
description = "Collection of synthesizer modules for the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_modules"
edition = "2024"

[features]
web = ["getrandom/wasm_js"]

[dependencies]
caw_core = { version = "0.5", path = "../core" }
caw_builder_proc_macros = { version = "0.1", path = "../builder-proc-macros" }
itertools = "0.14"
wide = "0.7"
rand = "0.9"
log = "0.4"
getrandom = "0.3"
