[package]
name = "caw_persist"
version = "0.1.0"
edition = "2024"
description = "Helpers for persisting data within the CAW synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_persistent"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
hex = "0.4"
anyhow = "1"
log = "0.4"
