[package]
name = "caw_player"
version = "0.1.0"
edition = "2021"

[dependencies]
caw_core = { version = "0.2", path = "../core" }
anyhow = "1.0"
cpal = "0.15"
log = "0.4"

[dev-dependencies]
caw_modules = { version = "0.1", path = "../modules" }
env_logger = "0.11"
rand = "0.8"

[[example]]
name = "saw"

[[example]]
name = "many_oscillators"

[[example]]
name = "many_oscillators_multithreaded"
