[package]
name = "caw_player"
version = "0.8.0"
description = "Play audio from the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_player"
edition = "2024"

[features]
web = ["cpal/wasm-bindgen"]

[dependencies]
caw_core = { version = "0.5", path = "../core" }
anyhow = "1.0"
cpal = "0.16"
log = "0.4"

[dev-dependencies]
caw_modules = { path = "../modules" }
env_logger = "0.11"
rand = "0.9"

[[example]]
name = "saw"

[[example]]
name = "many_oscillators"

[[example]]
name = "many_oscillators_multithreaded"
