[package]
name = "caw_sdl2"
version = "0.1.0"
edition = "2024"
description = "Helpers for interfacing with sdl2"
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_sdl2"

[dependencies]
sdl2 = "0.38"
caw_computer_keyboard = { version = "0.4", path = "../computer-keyboard" }
