[package]
name = "caw_utils"
description = "Utilities for building synthesizers with caw"
version = "0.4.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_utils"
edition = "2024"

[features]
web = ["getrandom/js"]

[dependencies]
caw_core = { version = "0.5", path = "../core" }
rand = "0.8"
getrandom = "0.2"
itertools = "0.14"
